--- a/app/src/main/res/layout/activity_explore_screen.xml
+++ b/app/src/main/res/layout/activity_explore_screen.xml
@@ -1,25 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".exploreScreen">
 
-        <TextView
-            android:id="@+id/tvExploreTitle"
-            android:layout_width="wrap_content"
+        <androidx.appcompat.widget.SearchView
+            android:id="@+id/searchView"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Explore"
-            android:textSize="24sp"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="16dp"/>
-
-        <ListView
-            android:id="@+id/listViewExplore"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="30dp"
+            android:background="@drawable/seachbackground"
+            app:iconifiedByDefault="false"
+            app:queryBackground="@android:color/transparent"
+            app:queryHint="What do you want to order?"
+            app:searchIcon="@drawable/searchicon" />
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/reyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@id/tvExploreTitle"
-            android:layout_margin="16dp"/>
-</RelativeLayout>
+            tools:listitem="@layout/explore_item_layout"/>
+</LinearLayout>
