--- a/app/src/main/res/layout/explore_item_layout.xml
+++ b/app/src/main/res/layout/explore_item_layout.xml
@@ -68,12 +68,26 @@
                     android:text="Abjeet Yadav"
                     android:textColor="@color/black" />
 
-                <TextView
-                    android:id="@+id/Location"
+                <LinearLayout
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/latobold"
-                    android:text="Myruru,within 1Km" />
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:id="@+id/City"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/latobold"
+                        android:text="Myruru" />
+
+                    <TextView
+                        android:id="@+id/Location"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/latobold"
+                        android:text=",within 6 km"/>
+
+                </LinearLayout>
+
 
             </LinearLayout>
 
